[package]
name = "gate_exchanger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }  # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
regex = "1.7.1"
colored = "2.0.0"
postgres = "0.19.4"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
log = "0.4.17"
chrono = "0.4.23"
